prevent multiple instances

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,15 +22,20 @@ endif()
 
 include(FindPkgConfig)
 pkg_check_modules(GTK4 REQUIRED gtk4)
+pkg_check_modules(WACOM REQUIRED libwacom)
 if (${USE_X11})
     pkg_check_modules(XRANDR REQUIRED xrandr)
     pkg_check_modules(XLIB REQUIRED x11)
+endif()
+if (${USE_WAYLAND})
+    pkg_check_modules(LIBINPUT REQUIRED libinput)
 endif()
 pkg_check_modules(UDEV REQUIRED libudev)
 
 set(incl
     ${GTK4_INCLUDE_DIRS}
     ${UDEV_INCLUDE_DIRS}
+    ${WACOM_INCLUDE_DIRS}
 )
 if (${USE_X11})
     set(incl
@@ -43,6 +48,7 @@ endif()
 set(libs
     ${GTK4_LIBRARIES}
     ${UDEV_LIBRARIES}
+    ${WACOM_LIBRARIES}
 )
 if (${USE_X11})
     set(libs
@@ -68,9 +74,15 @@ if (${USE_WAYLAND})
 endif()
 
 
-add_executable(${PROJECT_NAME} src/displays.cpp src/main.cpp src/ui.cpp src/wacom.cpp)
+add_executable(${PROJECT_NAME}
+    src/displays.cpp
+    src/instancemutex.cpp
+    src/main.cpp
+    src/ui.cpp
+    src/wacom.cpp
+)
 target_compile_definitions(${PROJECT_NAME} PRIVATE ${defs})
 target_include_directories(${PROJECT_NAME} PRIVATE ${incl})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${libs})
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
