--- a/.github/workflows/build-x11.yml
+++ b/.github/workflows/build-x11.yml
@@ -8,6 +8,12 @@ on:
   pull_request:
     branches: [ "main" ]
 
+inputs:
+  version:
+    description: 'App version'
+    required: true
+    default: ${{github.sha}}
+
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
@@ -29,7 +35,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWINDOW_SYSTEM=${{env.WINDOW_SYSTEM}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWINDOW_SYSTEM=${{env.WINDOW_SYSTEM}} -DAPP_VERSION=$INPUT_VERSION
 
     - name: Build
       # Build your program with the given configuration
